- tweaking about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,22 +1,33 @@
 %p Upside Down Academy is a work in progress.
-%p I created it to help improve education.
 %p
-  Basically I'm about to have my first child and
-  I can't stand the thought of him/her spending
-  15 years memorizing facts, being bored by school,
-  not producing anything creative, and not creating
-  anything of value.
+  The site was created to help make it easier for educators everywhere
+  to make school more engaging on a number of levels.
 %p
-  I know there are many many many schools and teachers
-  out there that exceed the description above, but there
-  are far more schools and teachers that fit that description
-  perfectly.
+  It is designed to make it easy to turn any lesson in to project-based learning,
+  to encourage students to think empathetically and improve their communication skills.
+  I hope that the idea of helping other students, like themselves, learn more easily,
+  will be a better motivation then simply trying to memorize some material.
+
+%br
+%br
+
 %p
-  Even if I could afford to send my child to a school
-  that met my expectations, there's no reason that every
-  school shouldn't be able to meet those same expectations.
-%p An amazing education shouldn't require super-hero teachers.
-%p This site is one step toward trying to fix that.
+  I know there are many great teachers and schools out there that
+  are engaging and challenging students in creative ways every day,
+  but from my experience and observations such a quality education
+  is, unfortunately, more the exception then the norm.
+%p
+  I'm about to have my first child and the thought of asking him or her
+  to attend schools every day for 15+ years that focus more on memorization
+  than understanding, more on obedience rather than creativity, more on
+  test-taking than on creating something of value... Well, the thought is not
+  one I can live with comfortably.
+
+%br
+%br
+
+%p An amazing education should be available to everyone, and it shouldn't require super-hero teachers.
+%p This site is one step toward trying to help with that.
 
 %br
 %br
