- more about pages

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,14 +5,14 @@
     = link_to("All Subjects", "")
 
   .footer_section
-    = link_to("For Schools/Teachers", "")
-    = link_to("For Home Schoolers", "")
-    = link_to("For Students", "")
-    = link_to("For Everyone", "")
+    = link_to("For Schools/Teachers", for_teachers_about_index_path)
+    = link_to("For Home Schoolers", for_home_schoolers_about_index_path)
+    = link_to("For Students", for_students_about_index_path)
+    = link_to("For Everyone", for_everyone_about_index_path)
 
   .footer_section.last_section
     = link_to("About", about_index_path)
     = link_to("Contact", contact_about_index_path)
-    = link_to("Press", "")
-    = link_to("Donate", "")
+    = link_to("Press", press_about_index_path)
+    = link_to("Donate", donate_about_index_path)
 
