--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -32,7 +32,7 @@
   %iframe{:width => "560", :height => "315", :src => "http://www.youtube.com/embed/9Ek61w1LxSc", :frameborder => "0", :allowfullscreen => "allowfullscreen"}
 
 .explore
-  %h3 Recent Tips / Lessons
+  %h3 Recent Lessons
   %table
     %tr
       %td
