--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,7 @@
 #footer
   .footer_section
     = link_to("Popular Lessons", "")
+    = link_to("Recent Lessons", "")
     = link_to("All Lessons", "")
     = link_to("All Subjects", "")
 
