--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -8,6 +8,4 @@
 %p
   %b Comments:
   = @reference.comments
-= link_to 'Edit', edit_reference_path(@reference)
-|
-\#{link_to 'Back', references_path}
+= link_to 'Edit', edit_lesson_reference_path(@lesson, @reference)
