--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -26,7 +26,7 @@
 .photos_and_videos
   margin-top: 30px
   width: 360px  
-  .video_thumbnail
+  .video_thumbnail, .photo_thumbnail
     overflow: hidden
     img
       float: left
