--- a/app/views/references/_form.html.haml
+++ b/app/views/references/_form.html.haml
@@ -11,11 +11,13 @@
     %p
       = f.label :title, "Title / name of the reference material:"
       %br
+      = f.label :title, "Title: "
       = f.text_field :title
   .field
     %p
       = f.label :url, "Where can you find this reference material?"
       %br
+      = f.label :title, "Website:"
       = f.text_field :url
   .field
     %p
