--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -1,5 +1,5 @@
 %h2= @video.title
 
-%iframe{:width => "720", :height => "450", :src => "http://www.youtube.com/embed/#{@video.youtube_id}", :frameborder => "0", :allowfullscreen => "allowfullscreen"}
+= render "videos/video", :video => @video, :size => :large
 
 = simple_format(@video.caption)
