--- a/app/views/videos/_form.html.haml
+++ b/app/views/videos/_form.html.haml
@@ -19,5 +19,7 @@
       %br
       = f.text_area :caption
 
+  %p You'll be able to upload your video on the next page. 
+
   .actions
     = f.submit "Save Video Information"
