--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -7,7 +7,7 @@
 
 .must_register
   clear: both
-  margin-top: 30px
+  padding: 15px 0
   td
     vertical-align: top
     text-align: right
@@ -28,6 +28,7 @@
   width: 360px  
   .video_thumbnail, .photo_thumbnail
     overflow: hidden
+    margin-bottom: 12px
     img
       float: left
       margin-right: 12px
