--- a/app/views/videos/_video_form.html.haml
+++ b/app/views/videos/_video_form.html.haml
@@ -19,3 +19,4 @@
 
   = hidden_field_tag("token", @form_info["token"])
   = submit_tag("Upload Video")
+  %p It may take a little while for the video to upload so please be patient.
