--- a/app/views/videos/upload.html.haml
+++ b/app/views/videos/upload.html.haml
@@ -4,6 +4,6 @@
   #notice{:style => "background-color: #FFFBCC; padding: 12px; margin: 12px 0;"}= notice
 
 %p Please select the video you would like to upload.
-%p Please keep videos as short as possible (no one likes a long, boring video).
+%p Generally speaking it's best to keep videos short, but it's up to you.
 
 = render "video_form"
