--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -1,34 +1,37 @@
 %p#notice= notice
 
-.right
-  - unless @lesson.videos.empty?
-    %h3 Videos
-    - @lesson.videos.each do |video|
-      %h4= video.title
-      = render "videos/video", :video => video, :size => :medium
-      .small= simple_format(video.caption)
+.lesson
+  %h2= @lesson.full_title
 
-  - unless @lesson.photos.empty?
-    %h3 Images
-    - @lesson.photos.each do |photo|
-      %h4= photo.title
-      = link_to(image_tag(photo.image.url), photo.image.url(:large))
-      .small= simple_format(photo.caption)
+  .lesson_info
+    %b Created by:
+    %span.normal= lesson_owner(@lesson)
 
+    %br
 
-%h2= @lesson.full_title
-%p
-  Created by:
-  = lesson_creator(@lesson)
-%p
-  = "#{lesson_creator(@lesson)}'s"
-  confidence with
-  = "#{@lesson.subject.downcase}:"
-  %br
-  = @lesson.confidence_text
+    %b
+      = "#{lesson_owner(@lesson)}'s"
+      confidence with
+      = "#{(@lesson.specific_subject || @lesson.subject).downcase}:"
+    = @lesson.confidence_text
 
-= simple_format(@lesson.body)
+  .photos_and_videos.right
+    - unless @lesson.videos.empty?
+      - @lesson.videos.each do |video|
+        %h4
+          = video.title
+          %span.small= link_to("View larger video >", lesson_video_path(@lesson, video), :class => "lightbox")
+        = render "videos/video", :video => video, :size => :medium
+        .small= simple_format(video.caption)
 
-= link_to 'Edit', edit_lesson_path(@lesson)
-|
-#{link_to 'Back', lessons_path}
+    - unless @lesson.photos.empty?
+      %h3 Images
+      - @lesson.photos.each do |photo|
+        %h4= photo.title
+        = link_to(image_tag(photo.image.url), photo.image.url(:large))
+        .small= simple_format(photo.caption)
+
+  %h4 Lesson:
+  = simple_format(@lesson.body)
+  %p= link_to('Edit lesson >', edit_lesson_path(@lesson)) if lesson_owner?(@lesson)
+
