- tweaking lessons page

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -36,10 +36,11 @@
 .photos_and_videos
   width: 390px
   margin-left: 60px
+  .video, .photo
+    padding-bottom: 30px
 
 .photos_and_videos_preview
-  margin-top: 30px
-  width: 360px
+  width: 390px
   .section
     padding-bottom: 30px
     .video_thumbnail, .photo_thumbnail
