--- a/app/views/lessons/edit.html.haml
+++ b/app/views/lessons/edit.html.haml
@@ -1,4 +1,15 @@
-= render "devise/registrations/short_form" if current_user.nil? && @lesson.title.present?
+- if @lesson.title.present?
+  = render "devise/registrations/short_form" if current_user.nil?
+
+  .right.example_lesson_info
+    %p.right= link_to("View lesson >", lesson_path(@lesson))
+    %h3 Your Lesson
+    %p
+      %b Status:
+      = @lesson.published_at.nil? ? "Not Published" : "Published"
 
 = render "lessons/lesson_header"
+
+.clear
+
 = render 'form'
