- notices on all pages

--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -78,6 +78,10 @@ p
 
 #notice
   color: green
+  padding: 12px
+  border: 1px solid #ccc
+  background-color: #eee
+  margin-bottom: 30px
 
 .field_with_errors
   padding: 2px
