- displaying photos in lesson

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -11,6 +11,12 @@
     background-color: #eee
     margin-bottom: 12px
     line-height: 1.5em
+  .lesson_text
+    width: 480px
+  .photos_and_videos
+    width: 420px
+    .video, .photo
+      padding-bottom: 30px
 
 .tip
   margin-bottom: 30px
@@ -32,12 +38,6 @@
   background-color: #eee
   padding: 12px
   margin-bottom: 30px
-
-.photos_and_videos
-  width: 390px
-  margin-left: 60px
-  .video, .photo
-    padding-bottom: 30px
 
 .photos_and_videos_preview
   width: 390px
