--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -5,6 +5,7 @@
     = @lesson.specific_subject
 
 .lesson
+  %p.right= link_to('Edit lesson >', edit_lesson_path(@lesson)) if lesson_owner?(@lesson)
   %h2= @lesson.title
 
   .lesson_info
@@ -20,23 +21,26 @@
     = @lesson.confidence_text
 
   .photos_and_videos.right
-    - unless @lesson.videos.empty?
-      - @lesson.videos.each do |video|
-        .video
-          %h4
-            = video.title
-            %span.small= link_to("View larger video >", lesson_video_path(@lesson, video), :class => "lightbox")
-          = render "videos/video", :video => video, :size => :medium
-          .small= simple_format(video.caption)
+    - if @lesson.videos.empty? && @lesson.photos.empty?
+      %h3 Videos & Images
+      %p No videos or images have been added to this lesson.
 
-    - unless @lesson.photos.empty?
-      - @lesson.photos.each do |photo|
-        .photo
-          %h4= photo.title
-          = link_to(image_tag(photo.image.url), lesson_photo_path(@lesson, photo), :class => "lightbox")
-          .small= simple_format(photo.caption)
+    - @lesson.videos.each do |video|
+      .video
+        %h4
+          = video.title
+          %span.small= link_to("View larger video >", lesson_video_path(@lesson, video), :class => "lightbox")
+        = render "videos/video", :video => video, :size => :medium
+        .small= simple_format(video.caption)
 
-  %h4 Lesson:
-  = simple_format(@lesson.body)
-  %p= link_to('Edit lesson >', edit_lesson_path(@lesson)) if lesson_owner?(@lesson)
+    - @lesson.photos.each do |photo|
+      .photo
+        %h4= photo.title
+        = link_to(image_tag(photo.image.url), lesson_photo_path(@lesson, photo), :class => "lightbox")
+        .small= simple_format(photo.caption)
+
+  .lesson_text
+    %h3 Lesson:
+    = simple_format(@lesson.body)
+
 
