--- a/app/views/lessons/edit.html.haml
+++ b/app/views/lessons/edit.html.haml
@@ -1,12 +1,11 @@
 - if @lesson.title.present?
   = render "devise/registrations/short_form" if current_user.nil?
 
-  .right.example_lesson_info
-    %p.right= link_to("View lesson >", lesson_path(@lesson))
-    %h3 Your Lesson
+  .right.text_right
     %p
-      %b Status:
+      %b Lesson Status:
       = @lesson.published_at.nil? ? "Not Published" : "Published"
+    %p= link_to("View lesson >", lesson_path(@lesson))
 
 = render "lessons/lesson_header"
 
