- tweaking about page

--- a/app/views/about/for_teachers.html.haml
+++ b/app/views/about/for_teachers.html.haml
@@ -3,12 +3,11 @@
 %p
   Upside Down Academy is designed to make it easy to turn any lesson in to
   a project where the students can demonstrate their own creativity by
-  figuring how they would teach the lesson themselves.
+  figuring how they would teach the lesson to someone else.
 
 %p
-  Instead of just tasked with learning the material, they're tasked with
-  trying to teach it in the best way they can imagine. Of course, in doing so,
-  they're also learning the material :)
+  Of course, while they try to figure out how best to teach the material,
+  they're also reinforcing their learning of the material.
 
 
 %br
