- showing reference material on the lesson page

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -17,6 +17,14 @@
     width: 420px
     .video, .photo
       padding-bottom: 30px
+  .references
+    clear: both
+    margin-top: 30px
+    border: 1px solid #ccc
+    background-color: #eee
+    padding: 12px
+    ul
+      margin: 0
 
 .tip
   margin-bottom: 30px
@@ -43,7 +51,7 @@
   width: 390px
   .section
     padding-bottom: 30px
-    .video_thumbnail, .photo_thumbnail
+    .video_thumbnail, .photo_thumbnail, .reference_preview
       border: 1px solid #ccc
       padding: 6px
       overflow: hidden
