- working on comments - lessons#index

--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -192,3 +192,10 @@ form
     border: none
     margin: 0
     padding: 0
+
+
+.explanation_box
+  padding: 12px
+  border: 1px solid #ccc
+  background-color: #eee
+  width: 360px
