--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,9 +1,9 @@
 #footer
   .footer_section
-    = link_to("Popular Lessons", "")
-    = link_to("Recent Lessons", "")
-    = link_to("All Lessons", "")
-    = link_to("All Subjects", "")
+    = link_to("Popular Lessons", lessons_path)
+    = link_to("Recent Lessons", lessons_path)
+    = link_to("All Lessons", lessons_path)
+    = link_to("All Subjects", lessons_path)
 
   .footer_section
     = link_to("For Schools/Teachers", for_teachers_about_index_path)
