--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -43,9 +43,10 @@
               - unless lesson.specific_subject.blank?
                 \>
                 = lesson.specific_subject
-              \>
               = link_to(lesson.title, lesson_path(lesson))
-              = "(#{link_to(lesson.user.display_name, profile_path(lesson.user))})".html_safe
+              .really_small
+                \- by
+                = link_to_unless(lesson.user.nil?, lesson_owner(lesson), profile_path(lesson.user))
       -#
         %td
           %h4 Browse Subjects
