- processing videos language

--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -112,6 +112,10 @@
             %p.small You haven't yet added any videos to your lesson.
           - @lesson.videos.each do |video|
             .video_thumbnail
+              - if video.created_at > 30.minutes.ago
+                %p.small.text_center
+                  It may take up to an hour for YouTube to process your video.
+                
               = link_to(image_tag("http://img.youtube.com/vi/#{video.youtube_id}/default.jpg"), lesson_video_path(@lesson, video), :class => "lightbox")
               = link_to(video.title, lesson_video_path(@lesson, video), :class => "lightbox")
               .small= simple_format(truncate(video.caption, :length => 90))
